summative.moria.Moria.scala.error
Compilation error:
Moria:2: error: not found: value NORD
setDirection(NORD);
             ^