summative.moria.Moria.scala.code
var x = getDirection()
setDirection(NORD);
println(x)
while(!isOverBaggle) {
  forward();
}